# zxtx

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  SPECIFICATION.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-opt.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: release.yml  tests.yml
certificates/: zxtx_root_cert.pem  zxtx_root_public_key.pem
docs/source/: api.rst  conf.py  index.rst  modules.rst  specification.rst  usage.rst
examples/: .gitignore  benchmark.py  benchmark_input.txt  generate_keys_certs.py  lowlevel_read.py  lowlevel_write.py
requirements/: base.txt  dev.txt  opt.txt
src/zxtx/: __init__.py  __main__.py  __package_info__.py  cli.py  constants.py  decryption.py  dtypes.py  encryption.py  highlevel.py  parser.py  signer.py  utils.py  verifier.py  writer.py
src/zxtx/certificates/: .gitignore
tests/: __init__.py  test_ed25519.py  test_highlevel.py  test_rsa.py  test_streaming.py  test_verify.py
