[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # bugbear
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "A",    # builtins shadowing
    "C4",   # comprehensions
    "T20",  # print statements and pdb
    "SIM",  # simplifiable constructs
    "PL",   # pylint rules (select ones)
    "RUF",  # Ruff-specific rules
]

lint.isort.known-first-party = ["zxtx"]
lint.isort.force-single-line = false

lint.ignore = [
    "E203",
    "E501",
    "F405",
    "F403",
    "T201",
    "T203",
    "B008",
    "UP007",
    "PLR0915",
    "PLR0912",
    "PLR0913",
    "A001",
    "A004",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR2004",
]
"src/zxtx/encryption.py" = [
    "PLR2004",
]
"src/zxtx/decryption.py" = [
    "PLR2004",
]
"src/zxtx/constants.py" = [
    "N801",
]
