[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zxtx"
version = "0.2.2"
description = "ZXTX file format support."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "voyager-2021", email = "voyager-2019@outlook.com" },
]
keywords = ["compression", "encryption", "file-format", "zxtx", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: File Formats",
]
dependencies = [
    "cryptography>=45.0.1",
    "brotli>=1.1.0",
]

[project.urls]
Documentation = "https://github.com/voyager-2021/zxtx#readme"
Source = "https://github.com/voyager-2021/zxtx"
Issues = "https://github.com/voyager-2021/zxtx/issues"

[project.scripts]
zxtx = "zxtx.cli:main"

[project.optional-dependencies]
opt = ["rich>=14.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.15.0",
    "pydocstyle>=6.3.0",
    "bandit>=1.8.3",
    "ruff>=0.14.0",
    "coverage>=7.8.1",
    "pytest-cov>=6.1.1",
    "pre-commit>=4.2.0",
    "tox>=4.53.1",
    "tox-uv>=1.35.2",
    "uv>=0.11.13",
    "black>=26.3.1",
    "isort>=8.0.1",
    "flake8>=7.3.0",
    "pylint>=4.0.5",
]
docs = [
    "sphinx>=6.0.0,<8.3.0",
    "sphinx-rtd-theme>=3.0.2,<3.1.0",
    "sphinx-autobuild>=2024.10.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zxtx"]

[tool.hatch.build]
only-packages = true

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
mypy_path = "src"
check_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = false
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
allow_untyped_globals = true
disable_error_code = ["assignment", "arg-type", "unreachable"]

[tool.ruff]
line-length = 88
target-version = "py314"
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # bugbear
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "A",    # builtins shadowing
    "C4",   # comprehensions
    "T20",  # print statements and pdb
    "SIM",  # simplifiable constructs
    "PL",   # pylint rules (select ones)
    "RUF",  # Ruff-specific rules
]

lint.isort.known-first-party = ["zxtx"]
lint.isort.force-single-line = false

lint.ignore = [
    "E203",
    "E501",
    "F405",
    "F403",
    "T201",
    "T203",
    "B008",
    "UP007",
    "PLR0915",
    "PLR0912",
    "PLR0913",
    "PLR2004",
    "A001",
    "A004",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "UP017",
    "PLR2004",
]
"src/zxtx/constants.py" = [
    "N801",
]
