[metadata]
version = 0.1.1
name = zxtx
description = ZXTX file format support.
long_description = file: README.md
long_description_content_type = text/markdown
author = voyager-2021
author_email = voyager-2019@outlook.com
license = MIT
keywords = compression, encryption, file-format, zxtx, cryptography
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security :: Cryptography
    Topic :: File Formats
url = https://github.com/voyager-2021/zxtx
project_urls =
    Documentation = https://github.com/voyager-2021/zxtx#readme
    Source = https://github.com/voyager-2021/zxtx
    Issues = https://github.com/voyager-2021/zxtx/issues

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    cryptography>=45.0.1
    brotli>=1.1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.3.5
    black>=25.1.0
    mypy>=1.15.0
    isort>=6.0.1
    pydocstyle>=6.3.0
    pylint>=3.3.7
    bandit>=1.8.3
    safety>=3.5.1
    flake8>=7.2.0
    tox>=4.26.0
    coverage>=7.8.1
    pytest-cov>=6.1.1
    pre-commit>=4.2.0
    twine>=6.0.1
    build>=1.2.2.post1
opt =
    rich>=14.0.0

[options.entry_points]
console_scripts =
    zxtx = zxtx.cli:main
